--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -50,9 +50,10 @@
 // stylelint-disable property-no-vendor-prefix
 .#{$check}__input {
   align-self: baseline;
+
   -moz-transform: translateY(5px);
 
-  .#{$check}.pf-m-standalone & {
+  .#{$check} & {
     -moz-transform: none;
   }
 }
