fix(toolbar): update menu-toggle, badge

--- a/src/patternfly/components/Badge/badge.scss
+++ b/src/patternfly/components/Badge/badge.scss
@@ -24,6 +24,7 @@
   font-weight: var(--#{$badge}--FontWeight);
   color: var(--#{$badge}--Color);
   text-align: center;
+  white-space: nowrap;
   background-color: var(--#{$badge}--BackgroundColor);
   border-radius: var(--#{$badge}--BorderRadius);
 
