--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -370,8 +370,7 @@
       --#{$check}__label--Color: currentcolor;
       --#{$check}__label--disabled--Color: currentcolor;
 
-      display: inline-flex;
-      align-items: inherit;
+      align-self: stretch;
 
       .#{$check}__input {
         align-self: revert;
@@ -543,6 +542,7 @@
 
 .#{$menu-toggle}__count {
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
   align-self: center;
   margin-left: var(--#{$menu-toggle}__count--MarginLeft);
