fix(toolbar): fixed vertical alignment issue (#5700)

--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -6,9 +6,8 @@
   --#{$check}__label--Color: var(--#{$pf-global}--Color--100);
   --#{$check}__label--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$check}__label--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--sm);
-  --#{$check}__input--Height: var(--#{$check}__label--FontSize);
-  --#{$check}__input--MarginTop: calc(((var(--#{$check}__label--FontSize) * var(--#{$check}__label--LineHeight)) - var(--#{$check}__input--Height)) / 2);
+  --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--md);
+  --#{$check}__input--TranslateY--moz: 5px;
   --#{$check}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__description--Color: var(--#{$pf-global}--Color--200);
   --#{$check}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
@@ -24,24 +23,18 @@
 
   &.pf-m-standalone {
     --#{$check}--GridGap: 0;
-    --#{$check}__input--Height: auto;
-    --#{$check}__input--MarginTop: 0;
+    --#{$check}__input--TranslateY--moz: 0;
 
     display: inline-grid;
-    line-height: 1;
   }
 }
 
 .#{$check}__label {
+  align-self: baseline;
   font-size: var(--#{$check}__label--FontSize);
   font-weight: var(--#{$check}__label--FontWeight);
   line-height: var(--#{$check}__label--LineHeight);
   color: var(--#{$check}__label--Color);
-}
-
-.#{$check}__input {
-  height: var(--#{$check}__input--Height);
-  margin-top: var(--#{$check}__input--MarginTop);
 }
 
 .#{$check}__description {
@@ -54,6 +47,13 @@
   grid-column: 2;
   margin-top: var(--#{$check}__body--MarginTop);
 }
+
+// stylelint-disable property-no-vendor-prefix
+.#{$check}__input {
+  align-self: baseline;
+  -moz-transform: translateY(var(--#{$check}__input--TranslateY--moz));
+}
+// stylelint-enable
 
 .#{$check}__label,
 .#{$check}__input {
