--- a/src/patternfly/components/Radio/radio.scss
+++ b/src/patternfly/components/Radio/radio.scss
@@ -6,26 +6,25 @@
   --#{$radio}__label--Color: var(--#{$pf-global}--Color--100);
   --#{$radio}__label--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$radio}__label--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$radio}__label--LineHeight: var(--#{$pf-global}--LineHeight--sm);
-  --#{$radio}__input--Height: var(--#{$radio}__label--FontSize);
-  --#{$radio}__input--MarginTop: calc(((var(--#{$radio}__label--FontSize) * var(--#{$radio}__label--LineHeight)) - var(--#{$radio}__input--Height)) / 2);
+  --#{$radio}__label--LineHeight: var(--#{$pf-global}--LineHeight--md);
+  --#{$radio}__input--TranslateY--moz: 5px;
   --#{$radio}__input--first-child--MarginLeft: #{pf-size-prem(1px)};
   --#{$radio}__input--last-child--MarginRight: #{pf-size-prem(1px)};
   --#{$radio}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$radio}__description--Color: var(--#{$pf-global}--Color--200);
   --#{$radio}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
 
-  display: grid;
+  display: inline-grid;
   grid-template-columns: auto 1fr;
   grid-gap: var(--#{$radio}--GridGap);
+  align-items: baseline;
+  width: 100%;
 
   &.pf-m-standalone {
     --#{$radio}--GridGap: 0;
-    --#{$radio}__input--Height: auto;
-    --#{$radio}__input--MarginTop: 0;
+    --#{$radio}__input--TranslateY--moz: 0;
 
-    display: inline-grid;
-    line-height: 1;
+    width: auto;
   }
 }
 
@@ -37,8 +36,9 @@
 }
 
 .#{$radio}__input {
-  height: var(--#{$radio}__input--Height);
-  margin-top: var(--#{$radio}__input--MarginTop);
+  // stylelint-disable property-no-vendor-prefix
+  -moz-transform: translateY(var(--#{$radio}__input--TranslateY--moz));
+  // stylelint-enable
 
   // fixes a chrome issue where the left edge is cut off in a container with overflow hidden
   &:first-child {
