--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -153,6 +153,7 @@
 
   // Split button, controls, check
   --#{$menu-toggle}__button--BackgroundColor: transparent;
+  --#{$menu-toggle}__button--AlignSelf: baseline;
   --#{$menu-toggle}__button--PaddingLeft: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}__button--PaddingRight: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}__button__controls--MarginRight: var(--#{$pf-global}--spacer--sm);
@@ -162,6 +163,7 @@
   --#{$menu-toggle}--m-typeahead__controls--MarginRight: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}--m-typeahead__controls--MarginLeft: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingRight: var(--#{$pf-global}--spacer--sm);
+  --#{$menu-toggle}--m-typeahead__button--AlignSelf: center;
 
   position: relative;
   display: inline-flex;
@@ -275,6 +277,7 @@
     --#{$menu-toggle}--focus--after--BorderBottomWidth: var(--#{$menu-toggle}--m-full-height--focus--after--BorderBottomWidth);
     --#{$menu-toggle}--active--after--BorderBottomWidth: var(--#{$menu-toggle}--m-full-height--active--after--BorderBottomWidth);
 
+    align-items: center;
     height: 100%;
   }
 
@@ -333,6 +336,7 @@
   &.pf-m-typeahead {
     --#{$menu-toggle}__button__controls--MarginRight: var(--#{$menu-toggle}--m-typeahead__controls--MarginRight);
     --#{$menu-toggle}__button__controls--MarginLeft: var(--#{$menu-toggle}--m-typeahead__controls--MarginLeft);
+    --#{$menu-toggle}__button--AlignSelf: var(--#{$menu-toggle}--m-typeahead__button--AlignSelf);
 
     align-items: stretch;
     padding: 0;
@@ -365,12 +369,19 @@
 
     > .#{$check} {
       --#{$menu-toggle}--PaddingRight: 0;
-      --#{$check}__input--MarginTop: 0;
       --#{$check}__label--Color: currentcolor;
       --#{$check}__label--disabled--Color: currentcolor;
 
       align-items: center;
       align-self: stretch;
+
+      .#{$check}__input {
+        align-self: revert;
+
+        // stylelint-disable property-no-vendor-prefix
+        -moz-transform: none;
+        // stylelint-enable
+      }
     }
 
     // Split button, active
@@ -507,6 +518,7 @@
   --#{$menu-toggle}__controls--MarginRight: var(--#{$menu-toggle}__button__controls--MarginRight);
   --#{$menu-toggle}__controls--MarginLeft: var(--#{$menu-toggle}__button__controls--MarginLeft);
 
+  align-self: var(--#{$menu-toggle}__button--AlignSelf);
   padding-right: var(--#{$menu-toggle}__button--PaddingRight);
   padding-left: var(--#{$menu-toggle}__button--PaddingLeft);
   color: inherit;
@@ -515,7 +527,6 @@
 }
 
 .#{$menu-toggle}__icon {
-  display: inline-flex;
   flex-shrink: 0;
   align-self: center;
   margin-right: var(--#{$menu-toggle}__icon--MarginRight);
@@ -530,7 +541,7 @@
 
 .#{$menu-toggle}__count {
   display: flex;
-  align-items: center;
+  flex-wrap: nowrap;
   margin-left: var(--#{$menu-toggle}__count--MarginLeft);
 }
 
