--- a/src/patternfly/components/Dropdown/dropdown-menu-item.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-menu-item.hbs
@@ -1,4 +1,7 @@
 <{{#if dropdown-menu-item--type}}{{dropdown-menu-item--type}}{{else}}button{{/if}} class="{{pfv}}dropdown__menu-item{{#if dropdown-menu-item--modifier}} {{dropdown-menu-item--modifier}}{{/if}}{{#if dropdown-menu-item--HasIcon}} pf-m-icon{{/if}}"
+  {{#unless dropdown--HasCheckboxes}}
+    role="menuitem"
+  {{/unless}}
   {{#unless dropdown-menu-item--type}}
     type="button"
   {{/unless}}
