--- a/src/patternfly/components/Dropdown/dropdown-menu.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-menu.hbs
@@ -7,13 +7,9 @@
   {{#unless dropdown--IsExpanded}}
     hidden
   {{/unless}}
-  {{#if dropdown-menu--type}}
-    {{#ifAny dropdown-menu--template--Groups dropdown--template--MenuToggleImageText}}
-      role="menu"
-    {{/ifAny}}
-  {{else}}
+  {{#unless dropdown--HasCustomContent}}
     role="menu"
-  {{/if}}
+  {{/unless}}
   {{#if dropdown-menu--attribute}}
     {{{dropdown-menu--attribute}}}
   {{/if}}>
