--- a/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
@@ -27,12 +27,12 @@
             {{/button}}
           {{/toolbar-item}}
           {{#> toolbar-item}}
-            {{#> dropdown dropdown--id=(concat log-viewer--id '-settings-dropdown') dropdown-menu--modifier="pf-m-align-right"}}
+            {{#> dropdown dropdown--id=(concat log-viewer--id '-settings-dropdown') dropdown-menu--modifier="pf-m-align-right" dropdown--HasCheckboxes="true"}}
               {{#> dropdown-toggle dropdown-toggle--HasNoToggleIcon="true" dropdown-toggle--attribute='aria-label="Settings"' dropdown-toggle--modifier="pf-m-plain"}}
                 <i class="fas fa-cog" aria-hidden="true"></i>
               {{/dropdown-toggle}}
               {{#> dropdown-menu}}
-                <li>
+                <li role="menuitem">
                   {{#> dropdown-menu-item dropdown-menu-item--type="div"}}
                     {{#> check check--type="label" check--attribute=(concat 'for="' log-viewer--id '-check-wrap-lines"')}}
                       {{#> check-input check-input--attribute=(concat 'id="' log-viewer--id '-check-wrap-lines" name="' log-viewer--id '-check-wrap-lines"')}}{{/check-input}}
@@ -40,7 +40,7 @@
                     {{/check}}
                   {{/dropdown-menu-item}}
                 </li>
-                <li>
+                <li role="menuitem">
                   {{#> dropdown-menu-item dropdown-menu-item--type="div"}}
                     {{#> check check--type="label" check--attribute=(concat 'for="' log-viewer--id '-check-show-timestamps"')}}
                       {{#> check-input check-input--attribute=(concat 'id="' log-viewer--id '-check-show-timestamps" name="' log-viewer--id '-check-show-timestamps"')}}{{/check-input}}
@@ -48,7 +48,7 @@
                     {{/check}}
                   {{/dropdown-menu-item}}
                 </li>
-                <li>
+                <li role="menuitem">
                   {{#> dropdown-menu-item dropdown-menu-item--type="div"}}
                     {{#> check check--type="label" check--attribute=(concat 'for="' log-viewer--id '-check-line-number"')}}
                       {{#> check-input check-input--attribute=(concat 'id="' log-viewer--id '-check-line-number" name="' log-viewer--id '-check-line-number"')}}{{/check-input}}
