chore(role): added roles to match react

--- a/src/patternfly/components/AppLauncher/app-launcher-menu-wrapper.hbs
+++ b/src/patternfly/components/AppLauncher/app-launcher-menu-wrapper.hbs
@@ -1,4 +1,5 @@
 <li class="{{pfv}}app-launcher__menu-wrapper{{#if app-launcher-menu-wrapper--modifier}} {{app-launcher-menu-wrapper--modifier}}{{/if}}"
+  role="none"
   {{#if app-launcher-menu-wrapper--attribute}}
 	  {{{app-launcher-menu-wrapper--attribute}}}
   {{/if}}>
