--- a/src/patternfly/components/Chip/chip-group.hbs
+++ b/src/patternfly/components/Chip/chip-group.hbs
@@ -1,6 +1,10 @@
 <div class="{{pfv}}chip-group{{#if chip-group--modifier}} {{chip-group--modifier}}{{/if}}"
   role="group"
-  aria-label="Chip group category"
+  {{#if chip-group--HasCategoryText}}
+    aria-labelledby="{{chip-group--id}}-label"
+  {{else if chip-group--aria-label}}
+    aria-label="{{chip-group--aria-label}}"
+  {{/if}}
   {{#if chip-group--attribute}}
     {{{chip-group--attribute}}}
   {{/if}}>
