--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -553,13 +553,21 @@
     --#{$menu}__list-item--Color: var(--#{$menu}__list-item--focus-within--Color, inherit);
   }
 
-  &.pf-m-disabled {
+  &.pf-m-disabled,
+  &.pf-m-aria-disabled {
     --#{$menu}__list-item--hover--BackgroundColor: transparent;
-    --#{$menu}__list-item--focus-within--BackgroundColor: transparent;
     --#{$menu}__item--Color: var(--#{$menu}__list-item--m-disabled__item--Color);
     --#{$menu}__item-toggle-icon: var(--#{$menu}__list-item--m-disabled__item-toggle-icon--Color);
+  }
+  
+  &.pf-m-disabled {
+    --#{$menu}__list-item--focus-within--BackgroundColor: transparent;
 
     pointer-events: none;
+  }
+
+  &.pf-m-aria-disabled .#{$menu}__item {
+    cursor: default;
   }
 
   &.pf-m-load {
@@ -615,7 +623,7 @@
     }
   }
 
-  @at-root label#{&}:where(:not([disabled], .pf-m-disabled)) {
+  @at-root label#{&}:where(:not([disabled], .pf-m-disabled, .pf-m-aria-disabled)) {
     cursor: pointer;
   }
 }
@@ -724,7 +732,9 @@
     --#{$menu}__item-action--Color: var(--#{$menu}__item-action--hover--Color);
   }
 
-  &:disabled {
+  &:disabled,
+  &.pf-m-disabled,
+  &.pf-m-aria-disabled {
     --#{$menu}__item-action--Color: var(--#{$menu}__item-action--disabled--Color);
   }
 }
